--- a/msg/tools/uorb_rtps_message_ids.yaml
+++ b/msg/tools/uorb_rtps_message_ids.yaml
@@ -272,6 +272,8 @@ rtps:
     id: 120
   - msg: sensor_gyro_status
     id: 121
+  - msg: manual_control_switches
+    id: 122
   ########## multi topics: begin ##########
   - msg: actuator_controls_0
     id: 150
