--- a/boards/emlid/navio2/CMakeLists.txt
+++ b/boards/emlid/navio2/CMakeLists.txt
@@ -31,10 +31,9 @@
 #
 ############################################################################
 
-add_subdirectory(navio_adc)
+add_subdirectory(adc)
 add_subdirectory(navio_rgbled)
 add_subdirectory(navio_sysfs_rc_in)
-
 
 ############################################################################
 # Upload
