--- a/posix-configs/rpi/px4_fw.config
+++ b/posix-configs/rpi/px4_fw.config
@@ -21,7 +21,7 @@ dataman start
 df_lsm9ds1_wrapper start -R 4
 df_ms5611_wrapper start
 navio_rgbled start
-navio_adc start
+adc start
 gps start -d /dev/spidev0.0 -i spi -p ubx
 ms4525_airspeed start
 rc_update start
