--- a/posix-configs/rpi/px4_test.config
+++ b/posix-configs/rpi/px4_test.config
@@ -18,7 +18,7 @@ param set BAT_CNT_V_CURR 0.001
 param set BAT_A_PER_V 15.391030303
 dataman start
 df_lsm9ds1_wrapper start -R 4
-#df_mpu9250_wrapper start -R 10
+mpu9250 start -R 10
 #df_hmc5883_wrapper start
 ms5611 start
 navio_rgbled start
