--- a/posix-configs/bbblue/px4_fw.config
+++ b/posix-configs/bbblue/px4_fw.config
@@ -53,7 +53,7 @@ dataman start
 
 df_bmp280_wrapper  start -D /dev/i2c-2
 
-df_mpu9250_wrapper start
+mpu9250 start
 # options:  -R rotation
 
 gps start -d /dev/ttyS2 -s -p ubx
