--- a/posix-configs/excelsior/px4.config
+++ b/posix-configs/excelsior/px4.config
@@ -72,7 +72,7 @@ param set UART_ESC_MOTOR2 2
 param set UART_ESC_MOTOR3 1
 param set UART_ESC_MOTOR4 3
 sleep 1
-df_mpu9250_wrapper start
+mpu9250 start
 df_bmp280_wrapper start
 rc_update start
 sensors start
