beaglebone blue hacks

--- a/posix-configs/bbblue/px4.config
+++ b/posix-configs/bbblue/px4.config
@@ -51,10 +51,12 @@ param set BAT_V_DIV 		11.0
 
 dataman start
 
-df_bmp280_wrapper  start -D /dev/i2c-2
+#df_bmp280_wrapper  start -D /dev/i2c-2
+bmp280 start
 
-df_mpu9250_wrapper start
+#df_mpu9250_wrapper start
 # options:  -R rotation
+mpu9250 start
 
 gps start -d /dev/ttyS2 -s -p ubx
 
