--- a/platforms/posix/CMakeLists.txt
+++ b/platforms/posix/CMakeLists.txt
@@ -110,8 +110,8 @@ endif()
 if ("${PX4_BOARD}" MATCHES "beaglebone_blue")
 	target_link_libraries(px4 PRIVATE robotics_cape)
 	add_dependencies(df_driver_framework librobotcontrol)
-	add_dependencies(df_bmp280 librobotcontrol)
-	add_dependencies(df_mpu9250 librobotcontrol)
+	#add_dependencies(df_bmp280 librobotcontrol)
+	#add_dependencies(df_mpu9250 librobotcontrol)
 
 elseif ("${PX4_BOARD}" MATCHES "sitl")
 
